Fix sommaire et mdx img

--- a/content/blog/introduction-developpement-web-moderne/index.mdx
+++ b/content/blog/introduction-developpement-web-moderne/index.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Introduction au Développement Web Moderne"
+title: "Juste un test foireux"
 slug: "introduction-developpement-web-moderne"
 description: "Découvrez les fondamentaux du développement web moderne, les meilleures pratiques et les technologies essentielles pour créer des applications web performantes."
 date: "2024-02-20"
@@ -17,7 +17,7 @@ Un autre paragraphe avec un [lien interne](/blog/autre-article) et un [lien exte
 ## Premier chapitre
 Du contenu avec une image :
 
-<img src="/blog/article/image.jpg" alt="Description de l'image" />
+<Image src="/blog/premier-article/banner.jpg" alt="Description de l'image" caption="Lorem ipsum dolor sit amet, consectetur adipiscing elit." />
 
 ## Conclusion
 Conclusion de l'article...
