--- a/content/blog/new-article/index.mdx
+++ b/content/blog/new-article/index.mdx
@@ -9,38 +9,31 @@ banner: "/blog/premier-article/banner.jpg"
 tags: ["react", "nextjs", "web"]
 ---
 
-# Introduction au Développement Web Moderne
-
-## Table des matières
-- [Introduction](#introduction)
-- [Les fondamentaux](#les-fondamentaux)
-- [Conclusion](#conclusion)
-
 ## Introduction
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed non risus. Suspendisse lectus tortor, dignissim sit amet, adipiscing nec, ultricies sed, dolor. Cras elementum ultrices diam.
+Premier paragraphe de l'introduction...
 
-## Les fondamentaux
-Maecenas ligula massa, varius a, semper congue, euismod non, mi. Proin porttitor, orci nec nonummy molestie, enim est eleifend mi, non fermentum diam nisl sit amet erat. Duis semper. 
+Un autre paragraphe avec un [lien interne](/blog/autre-article) et un [lien externe](https://exemple.com).
 
-### Les bases du HTML
-Duis arcu massa, scelerisque vitae, consequat in, pretium a, enim. Pellentesque congue. Ut in risus volutpat libero pharetra tempor. Cras vestibulum bibendum augue.
+## Premier chapitre
+Du contenu avec une image :
 
-### CSS moderne
-Praesent egestas leo in pede. Praesent blandit odio eu enim. Pellentesque sed dui ut augue blandit sodales. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae.
+<Image src="/blog/premier-article/banner.jpg" alt="Description de l'image" caption="Lorem ipsum dolor sit amet, consectetur adipiscing elit." />
 
 ## Conclusion
-Nulla facilisi. Ut fringilla. Suspendisse potenti. Nunc feugiat mi a tellus consequat imperdiet. Vestibulum sapien. Proin quam. Etiam ultrices.
+Conclusion de l'article...
 
-## FAQ
 <FAQ>
-[
-  {
-    "question": "Par où commencer en développement web ?",
-    "answer": "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed non risus."
-  },
-  {
-    "question": "Quels sont les prérequis ?",
-    "answer": "Suspendisse lectus tortor, dignissim sit amet, adipiscing nec, ultricies sed, dolor."
-  }
-]
+  <Question>
+    Première question de la FAQ ?
+  </Question>
+  <Answer>
+    Réponse à la première question...
+  </Answer>
+
+  <Question>
+    Deuxième question de la FAQ ?
+  </Question>
+  <Answer>
+    Réponse à la deuxième question...
+  </Answer>
 </FAQ>
