New article on NoSQL vs SQL

--- a/content/blog/apprendre-php-8-guide-debutant/index.mdx
+++ b/content/blog/apprendre-php-8-guide-debutant/index.mdx
@@ -2,7 +2,7 @@
 title: "PHP 8 en [YEAR] : Pourquoi et Comment l'Apprendre"
 slug: "apprendre-php-8-guide-debutant"
 description: "Découvrez pourquoi PHP 8 reste incontournable en [YEAR] et comment débuter votre apprentissage. Histoire, évolution et ressources essentielles pour les développeurs web."
-date: "[YEAR]-02-24"
+date: "[YEAR]-02-01"
 author: "Killian Doubre"
 readTime: "5 min"
 banner: "/blog/1-article-php/PHP-banner.jpg"
@@ -63,7 +63,7 @@ La [documentation officielle de PHP](https://www.php.net/docs.php) reste une ré
 
 La communauté [Reddit PHP](https://www.reddit.com/r/PHP/) est un trésor d'informations avec des discussions pointues sur les meilleures pratiques.
 
-Pour une approche plus structurée, je recommande vivement le livre "[PHP 8 Programming Tips, Tricks and Best Practices](https://amzn.to/4hWwsPO)" qui couvre les techniques avancées et les meilleures pratiques.
+Pour une approche plus structurée, je recommande vivement le livre "[PHP 8 - Développez un site web dynamique et interactif](https://amzn.to/4hWwsPO)" qui couvre les techniques avancées et les meilleures pratiques.
 
 <Image src="/blog/1-article-php/php-8-developpez-un-site-web-dynamique-et-interactif-2e-edition-9782409041525_XL.png" alt="Couverture du livre: PHP 8 - Développez un site web dynamique et interactif" caption="Un excellent livre à lire pour apprendre le PHP 8 de A à Z !" />
 
