--- a/content/blog/javascript-article/index.mdx
+++ b/content/blog/javascript-article/index.mdx
@@ -2,7 +2,7 @@
 title: "JavaScript en [YEAR] : Pourquoi reste-t-il le langage essentiel pour tout développeur web ?"
 slug: "javascript-langage-essentiel-developpeur-web"
 description: "Découvrez pourquoi JavaScript demeure le langage incontournable pour devenir développeur web, son histoire fascinante et son écosystème florissant qui révolutionne le web moderne."
-date: "[YEAR]-02-26"
+date: "[YEAR]-02-03"
 author: "Killian Doubre"
 readTime: "5 min"
 banner: "/blog/3-article-js-a-apprendre/js-banner.jpg"
@@ -67,7 +67,7 @@ Commencez par les fondamentaux. Avant de vous plonger dans les frameworks, maît
 
 La documentation MDN (Mozilla Developer Network) constitue une référence incontournable. Créée par les développeurs de Firefox, cette [documentation JavaScript](https://developer.mozilla.org/fr/docs/Web/JavaScript) est à la fois complète, précise et accessible aux débutants.
 
-Pour un apprentissage plus structuré, je recommande vivement le livre "[JavaScript : The Definitive Guide](https://amzn.to/3QBhl2c)" de David Flanagan, une référence qui a guidé des générations de développeurs. Sa dernière édition couvre toutes les évolutions récentes du langage.
+Pour un apprentissage plus structuré, je recommande vivement le livre "[Eloquent JavaScript, 4th Edition](https://amzn.to/3QBhl2c)" de David Flanagan, une référence qui a guidé des générations de développeurs. Sa dernière édition couvre toutes les évolutions récentes du langage.
 
 <Image src="/blog/3-article-js-a-apprendre/js-book.png" alt="Couverture d'un excellent livre pour apprendre le javascript" caption="Eloquent JavaScript, 4th Edition, un livre incourtounable pour apprendre le Javascript !" />
 
