--- a/content/blog/apprendre-php-8-guide-debutant/index.mdx
+++ b/content/blog/apprendre-php-8-guide-debutant/index.mdx
@@ -2,7 +2,7 @@
 title: "PHP 8 en [YEAR] : Pourquoi et Comment l'Apprendre"
 slug: "apprendre-php-8-guide-debutant"
 description: "Découvrez pourquoi PHP 8 reste incontournable en [YEAR] et comment débuter votre apprentissage. Histoire, évolution et ressources essentielles pour les développeurs web."
-date: "[YEAR]-02-01"
+date: "2025-02-01"
 author: "Killian Doubre"
 readTime: "5 min"
 banner: "/blog/1-article-php/PHP-banner.jpg"
@@ -85,7 +85,7 @@ PHP 8 représente une excellente porte d'entrée dans le monde du développement
 
 L'apprentissage de PHP vous ouvrira de nombreuses opportunités professionnelles. Commencez votre voyage d'apprentissage dès aujourd'hui, avec patience et méthode. Vous ne le regretterez pas !
 
-Si vous avez besoin d'un site web professionnel développé avec les dernières technologies incluant PHP 8, n'hésitez pas à me contacter sur [killiandoubre.com](https://killiandoubre.com/). Je propose des solutions web sur mesure qui allient performance, sécurité et évolutivité pour répondre à vos besoins spécifiques.
+Si vous avez besoin d'un site web professionnel développé avec les dernières technologies incluant PHP 8, n'hésitez pas à me contacter sur [killiandoubre.com](https://killiandoubre.com). Je propose des solutions web sur mesure qui allient performance, sécurité et évolutivité pour répondre à vos besoins spécifiques.
 
 <FAQ>
   <Question>
