--- a/content/blog/developpeur-web-ia-carriere-avenir/index.mdx
+++ b/content/blog/developpeur-web-ia-carriere-avenir/index.mdx
@@ -2,7 +2,7 @@
 title: "Développeur Web en [YEAR] : Face à l'IA, est-ce encore une carrière d'avenir ?"
 slug: "developpeur-web-ia-carriere-avenir"
 description: "L'IA transforme le développement web, mais faut-il encore se lancer dans cette carrière ? Découvrez pourquoi le métier de développeur reste pertinent malgré l'évolution technologique."
-date: "[YEAR]-01-31"
+date: "2025-01-31"
 author: "Killian Doubre"
 readTime: "6 min"
 banner: "/blog/2-article-ia/ia-banner.jpg"
@@ -73,7 +73,7 @@ Les développeurs de demain seront ceux qui embrasseront l'IA comme une alliée,
 
 Si vous envisagez de vous lancer dans le développement web, sachez que vous choisissez une voie d'avenir, en constante évolution, qui vous offrira des défis intellectuels stimulants pour les années à venir. N'est-ce pas exactement ce que recherche un esprit curieux ?
 
-Si vous êtes à la recherche d'un développeur web qui combine expertise technique et maîtrise des outils d'IA pour créer des solutions web modernes et efficaces, n'hésitez pas à me contacter sur [killiandoubre.com](https://killiandoubre.com/). Je propose des services de développement web sur mesure, intégrant les meilleures pratiques actuelles et les technologies d'avenir.
+Si vous êtes à la recherche d'un développeur web qui combine expertise technique et maîtrise des outils d'IA pour créer des solutions web modernes et efficaces, n'hésitez pas à me contacter sur [killiandoubre.com](https://killiandoubre.com). Je propose des services de développement web sur mesure, intégrant les meilleures pratiques actuelles et les technologies d'avenir.
 
 <FAQ>
   <Question>
