--- a/content/blog/javascript-article/index.mdx
+++ b/content/blog/javascript-article/index.mdx
@@ -2,7 +2,7 @@
 title: "JavaScript en [YEAR] : Pourquoi reste-t-il le langage essentiel pour tout développeur web ?"
 slug: "javascript-langage-essentiel-developpeur-web"
 description: "Découvrez pourquoi JavaScript demeure le langage incontournable pour devenir développeur web, son histoire fascinante et son écosystème florissant qui révolutionne le web moderne."
-date: "[YEAR]-02-03"
+date: "2025-02-03"
 author: "Killian Doubre"
 readTime: "5 min"
 banner: "/blog/3-article-js-a-apprendre/js-banner.jpg"
@@ -91,7 +91,7 @@ Apprendre JavaScript en [YEAR] constitue l'un des investissements les plus judic
 
 Que vous visiez le développement frontend, backend, ou full-stack, JavaScript vous accompagnera tout au long de votre parcours professionnel. Sa courbe d'apprentissage progressive permet de devenir rapidement productif tout en offrant une profondeur qui continuera de vous stimuler intellectuellement pendant des années.
 
-Si vous êtes à la recherche d'un développeur JavaScript expérimenté pour donner vie à vos projets web, n'hésitez pas à me contacter sur [killiandoubre.com](https://killiandoubre.com/). Je propose des solutions sur mesure utilisant les technologies JavaScript les plus modernes pour créer des expériences web performantes et engageantes.
+Si vous êtes à la recherche d'un développeur JavaScript expérimenté pour donner vie à vos projets web, n'hésitez pas à me contacter sur [killiandoubre.com](https://killiandoubre.com). Je propose des solutions sur mesure utilisant les technologies JavaScript les plus modernes pour créer des expériences web performantes et engageantes.
 
 <FAQ>
   <Question>
