--- a/content/blog/nosql-vs-sql/index.mdx
+++ b/content/blog/nosql-vs-sql/index.mdx
@@ -2,7 +2,7 @@
 title: "SQL vs NoSQL: Quel type de base de données choisir pour vos projets web ?"
 slug: "sql-vs-nosql-guide-choix-base-donnees-web"
 description: "Découvrez les différences essentielles entre SQL et NoSQL, leur histoire, forces et faiblesses, et apprenez à choisir la bonne base de données pour vos projets web."
-date: "[YEAR]-02-04"
+date: "2025-02-04"
 author: "Killian Doubre"
 readTime: "5 min"
 banner: "/blog/4-article-sql-vs-nosql/sqlvsnosql-banner.jpg"
@@ -147,7 +147,7 @@ Le débat SQL vs NoSQL s'est longtemps cantonné à une opposition binaire. Aujo
 
 Les deux approches continueront à coexister et à évoluer, empruntant les meilleures caractéristiques l'une de l'autre. Le développeur avisé maîtrisera suffisamment les deux paradigmes pour faire des choix éclairés selon le contexte.
 
-Si vous avez besoin d'une expertise pour choisir et implémenter la solution de base de données idéale pour votre projet web, n'hésitez pas à me contacter sur [killiandoubre.com](https://killiandoubre.com/). Je propose des services de conseil et de développement personnalisés pour optimiser vos applications avec la bonne architecture de données.
+Si vous avez besoin d'une expertise pour choisir et implémenter la solution de base de données idéale pour votre projet web, n'hésitez pas à me contacter sur [killiandoubre.com](https://killiandoubre.com). Je propose des services de conseil et de développement personnalisés pour optimiser vos applications avec la bonne architecture de données.
 
 <FAQ>
   <Question>
