--- a/content/blog/python-in-web-dev/index.mdx
+++ b/content/blog/python-in-web-dev/index.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Python pour le développement web en 2025 : Pourquoi et comment l'adopter ?"
+title: "Python pour le développement web en [YEAR] : Pourquoi et comment l'adopter ?"
 slug: "python-developpement-web-guide-complet"
 description: "Découvrez pourquoi Python s'impose comme une solution puissante pour le développement web moderne, son histoire, ses frameworks et ses avantages par rapport aux autres langages."
 date: "2025-02-06"
@@ -165,7 +165,7 @@ Bien qu'il ne soit pas la solution idéale pour tous les cas d'usage (notamment 
 
 Que vous soyez un développeur expérimenté cherchant à élargir votre palette ou un débutant faisant vos premiers pas dans le développement web, Python mérite votre attention. Ses frameworks matures, sa communauté accueillante et sa syntaxe élégante pourraient bien faire de votre prochain projet web une expérience particulièrement agréable et productive.
 
-Si vous cherchez à développer une application web avec Python et souhaitez bénéficier d'une expertise professionnelle, n'hésitez pas à me contacter sur [killiandoubre.com](https://killiandoubre.com/). Je propose des services de développement web sur mesure utilisant les technologies Python les plus adaptées à vos besoins spécifiques.
+Si vous cherchez à développer une application web avec Python et souhaitez bénéficier d'une expertise professionnelle, n'hésitez pas à me contacter sur [killiandoubre.com](https://killiandoubre.com). Je propose des services de développement web sur mesure utilisant les technologies Python les plus adaptées à vos besoins spécifiques.
 
 <FAQ>
   <Question>
