Better blog articles pages

--- a/content/blog/apprendre-php-8-guide-debutant/index.mdx
+++ b/content/blog/apprendre-php-8-guide-debutant/index.mdx
@@ -65,7 +65,7 @@ La communauté [Reddit PHP](https://www.reddit.com/r/PHP/) est un trésor d'info
 
 Pour une approche plus structurée, je recommande vivement le livre "[PHP 8 - Développez un site web dynamique et interactif](https://amzn.to/4hWwsPO)" qui couvre les techniques avancées et les meilleures pratiques.
 
-<Image src="/blog/1-article-php/php-8-developpez-un-site-web-dynamique-et-interactif-2e-edition-9782409041525_XL.png" alt="Couverture du livre: PHP 8 - Développez un site web dynamique et interactif" caption="Un excellent livre à lire pour apprendre le PHP 8 de A à Z !" />
+<Image url="https://amzn.to/4hWwsPO" src="/blog/1-article-php/php-8-developpez-un-site-web-dynamique-et-interactif-2e-edition-9782409041525_XL.png" alt="Couverture du livre: PHP 8 - Développez un site web dynamique et interactif" caption="Un excellent livre à lire pour apprendre le PHP 8 de A à Z !" />
 
 ### Une approche progressive
 
