--- a/content/blog/javascript-article/index.mdx
+++ b/content/blog/javascript-article/index.mdx
@@ -69,7 +69,7 @@ La documentation MDN (Mozilla Developer Network) constitue une référence incon
 
 Pour un apprentissage plus structuré, je recommande vivement le livre "[Eloquent JavaScript, 4th Edition](https://amzn.to/3QBhl2c)" de David Flanagan, une référence qui a guidé des générations de développeurs. Sa dernière édition couvre toutes les évolutions récentes du langage.
 
-<Image src="/blog/3-article-js-a-apprendre/js-book.png" alt="Couverture d'un excellent livre pour apprendre le javascript" caption="Eloquent JavaScript, 4th Edition, un livre incourtounable pour apprendre le Javascript !" />
+<Image url="https://amzn.to/3QBhl2c" src="/blog/3-article-js-a-apprendre/js-book.png" alt="Couverture d'un excellent livre pour apprendre le javascript" caption="Eloquent JavaScript, 4th Edition, un livre incourtounable pour apprendre le Javascript !" />
 
 La pratique régulière est essentielle. Créez des projets personnels, participez à des défis de code sur des plateformes comme [Codewars](https://www.codewars.com/) ou contribuez à des projets open source. Rien ne remplace l'expérience acquise en résolvant des problèmes concrets !
 
