--- a/content/blog/nosql-vs-sql/index.mdx
+++ b/content/blog/nosql-vs-sql/index.mdx
@@ -106,7 +106,7 @@ SQL reste le choix privilégié dans plusieurs scénarios :
 
 Si vous optez pour SQL, le livre ["SQL - Les fondamentaux du langage"](https://amzn.to/4hf0KMx) constitue une référence incontournable pour optimiser vos performances.
 
-<Image src="/blog/4-article-sql-vs-nosql/book1.png" alt="Couverture d'un livre pour apprendre SQL: SQL Performance Explained" caption="&nbsp;"/>
+<Image url="https://amzn.to/4hf0KMx" src="/blog/4-article-sql-vs-nosql/book1.png" alt="Couverture d'un livre pour apprendre SQL: SQL Performance Explained" caption="&nbsp;"/>
 
 ### Quand choisir NoSQL ?
 
@@ -119,7 +119,7 @@ NoSQL brille particulièrement dans ces contextes :
 
 Pour approfondir le sujet NoSQL, ["Les bases de données NoSQL: Comprendre et mettre en oeuvre"](https://amzn.to/43cuLZW) offre une excellente introduction aux différents modèles et leurs cas d'usage.
 
-<Image src="/blog/4-article-sql-vs-nosql/book2.png" alt="Couverture d'un livre pour apprendre NoSQL: NoSQL Distilled" caption="&nbsp;"/>
+<Image url="https://amzn.to/43cuLZW" src="/blog/4-article-sql-vs-nosql/book2.png" alt="Couverture d'un livre pour apprendre NoSQL: NoSQL Distilled" caption="&nbsp;"/>
 
 ### L'approche hybride : Le meilleur des deux mondes ?
 
