--- a/content/blog/python-in-web-dev/index.mdx
+++ b/content/blog/python-in-web-dev/index.mdx
@@ -85,7 +85,7 @@ Django mérite une attention particulière pour sa philosophie "batteries includ
 
 Cette approche tout-en-un permet de développer rapidement des applications web complexes sans avoir à assembler manuellement différentes bibliothèques. Pour approfondir Django, le livre ["Apprendre la programmation web avec Python et Django"](https://amzn.to/41j1qKF) offre une excellente perspective sur les meilleures pratiques.
 
-<Image src="/blog/5-python-in-web-dev/python-book.png" alt="L'écosystème Python pour le web montrant les frameworks, bibliothèques et outils associés" caption="La richesse de l'écosystème Python facilite le développement d'applications web complètes." />
+<Image url="https://amzn.to/41j1qKF" src="/blog/5-python-in-web-dev/python-book.png" alt="L'écosystème Python pour le web montrant les frameworks, bibliothèques et outils associés" caption="La richesse de l'écosystème Python facilite le développement d'applications web complètes." />
 
 ### Une polyvalence exceptionnelle
 
